fixed background colors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 </head>
 <body>
-<div id="blueRectangle"></div>
+<div class="blueRectangle"></div>
 <div id="background">
 <div id="firstSection">
     <section id="Welcome">
@@ -15,9 +15,6 @@
         <img id="me" src="/Images/IMG_2178.jpeg" alt="Me!">
     </section>
     <p id="AboutMeBlurb"></p>
-</div>
-<div id="Links">
-
 </div>
 <script>
     const animatedText = document.getElementById('welcomeText');
@@ -53,9 +50,18 @@
         typeWriter();
     };
 </script>
-    <div id="portfolioinks">
-        
+    <div id="portfolioLinks">
+        <a href="https://ghlf.org/compass-koa-page/">
+            <button class="linkButtons">
+            </button>
+        </a>
+        <button class="linkButtons">
+        </button>
     </div>
+</div>
+<div class="blueRectangle">
+    <marquee loop="-1">Website designed and created by me!
+    </marquee>
 </div>
 </body>
 </html>
