adding links to portfolio projects

--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
 </script>
     <div id="portfolioLinks">
         <a href="https://ghlf.org/compass-koa-page/">
-            <button class="linkButtons">
+            <button class="linkButtons" id="ghlf">
             </button>
         </a>
-        <button class="linkButtons">
+        <a href="">
+        <button class="linkButtons" id="powerGrid">
+
         </button>
+        </a>
     </div>
 </div>
 <div class="blueRectangle">
