Added blurb about GHLF project

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
     <div id="portfolioLinks">
         <a href="https://ghlf.org/compass-koa-page/">
             <button class="linkButtons" id="ghlf">
+                Designed and developed the CompassKOA
+                web page to enhance user engagement and
+                accessibility for the community. Utilized
+                JavaScript to implement dynamic functionality,
+                HTML to structure the content, and CSS to
+                create an aesthetically appealing and responsive
+                design. The page integrates seamlessly with the
+                larger GHLF website to provide users with
+                essential resources and information.
             </button>
         </a>
         <a href="">
