added training plan generator

--- a/index.html
+++ b/index.html
@@ -65,15 +65,26 @@
             </button>
         </a>
         <a href="">
-        <button class="linkButtons" id="powerGrid">
-
+        <button class="linkButtons" id="run">
+            Created a running plan generator that takes a
+            goal distance as an input and produces a weekly
+            plan with specific workouts. It also implements a
+            machine learning model using sklearn to predict the
+            total time for a given distance based on a provided
+            dataset.
         </button>
         </a>
     </div>
     <div id="portfolioLinks2">
         <a href="tetris.html">
             <button class="linkButtons" id="tetris">
-
+                This Tetris game is a browser-based implementation
+                of the classic block-stacking puzzle. Built entirely
+                with JavaScript, HTML, and CSS, the project provides
+                a simple and intuitive way to play Tetris directly
+                in your web browser. The game features colorful
+                tetromino shapes, smooth animations, and responsive
+                controls for an enjoyable gaming experience.
             </button>
         </a>
         <a href="">
