added training plan generator

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 essential resources and information.
             </button>
         </a>
-        <a href="">
+        <a href="https://github.com/OwenCooper33/RaceTimePredictor">
         <button class="linkButtons" id="run">
             Created a running plan generator that takes a
             goal distance as an input and produces a weekly
