fixed image issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="firstSection">
     <section id="Welcome">
         <div id="welcomeText">Hello! &#128075<br>I'm Owen</br></div>
-        <img id="me" src="Images/IMG_2178.jpeg" alt="Me!">
+        <img id="me" src="Images/IMG_2178.JPG" alt="Me!">
     </section>
     <p id="AboutMeBlurb"></p>
 </div>
